2020-08-21  Brian Ripley

	* R/pdMat.R: use parent.frame not sys.parent for data= args
	* DESCRIPTION (Version, Date): Prepare to release 3.1-149.

2020-08-20 Peter Dalgaard

	* NAMESPACE, R/corStruct.R, man/corFactor.corStruct.Rd,
	  man/corMatrix.corStruct.Rd, tests/corFactor.R: Applied patch set
	  from Sebastian Meyer to fix misnamed
	  corFactor.compSymm -> corFactor.corCompSymm PR#16110

2020-07-20 Deepayan Sarkar

	* R/lme.R: Applied patch from Johannes Ranke to fix PR#17761

	* DESCRIPTION: update version / date (unreleased)

2020-05-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Contact, MailingList): R-help (*not* R-core)

2020-04-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 3.1-148 (not yet released)

	* man/nlsList.Rd: fix stopifnot(.) check in examples.

2020-03-03  Brian Ripley

	* src/nlmefit.c: clean up code.

2020-03-03  Brian Ripley

	* DESCRIPTION (Version): 3.1-147 (released)

	* po: update, including updated German translations from Detlef Steuer

2020-03-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 3.1-146 (unreleased)

	* man/Remifentanil.Rd: more information incl references.

2020-03-03  Brian Ripley

	* DESCRIPTION (Version): 3.1-145 (released)

	* src/nlmefit.c: avoid clang-UBSAN warning.

2020-02-06

	* DESCRIPTION (Version): 3.1-144 (released)

2020-02-02  Kurt Hornik  <Kurt.Hornik@wu.ac.at>

	* man/gnls.Rd: Drop docs for argument not in usage.

2019-12-10  Brian Ripley

	* DESCRIPTION (Version): 3.1-143 (released)

	* tests/augPred_lab.R: change yet another 'plucked from air' tolerance.

2019-11-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 3.1-142 (released)

	* R/nlme.R: use vapply and is.matrix.
	* man/pairs.compareFits.Rd: change example.

2019-09-26  Brian Ripley

	* src/nlmefit.c: suppress warning from clang trunk.

2019-08-01  Kurt Hornik  <Kurt.Hornik@wu.ac.at>

	* DESCRIPTION (Version): 3.1-141 (released)
